test/class/invalid/noReturnVoidType.wacc
begin

  void f() is
    return 1
  end
  
  println x

end
